# plasmoid-ydinfo

./: .gitignore  CMakeLists.txt  Changelog  Makefile  Messages.sh  README  README.md  YDInfo.kdev4
.kdev4/: YDInfo.kdev4
cmake/: GenerateVersion.cmake  Packing.cmake
debian/: changelog  control  copyright  rules
debian/source/: options
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: configGeneral.qml  main.qml
translations/: CMakeLists.txt  plasma_applet_com.ylsoftware.plasma.ydinfo_nl.po
translations/po/: plasma_applet_com.ylsoftware.plasma.ydinfo.pot  plasma_applet_com.ylsoftware.plasma.ydinfo_en.po  plasma_applet_com.ylsoftware.plasma.ydinfo_nl.po  plasma_applet_com.ylsoftware.plasma.ydinfo_ru.po
